--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,12 +41,10 @@
         android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:text="添加号码"
-        app:layout_constraintEnd_toStartOf="@+id/period"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toStartOf="@+id/calling_time"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_phone2" />
 
@@ -71,8 +69,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="周期"
-        app:layout_constraintBaseline_toBaselineOf="@+id/add"
+        app:layout_constraintBaseline_toBaselineOf="@+id/calling_time"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/calling_time" />
+
+    <Button
+        android:id="@+id/calling_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="拨打时长"
+        app:layout_constraintBaseline_toBaselineOf="@+id/add"
+        app:layout_constraintEnd_toStartOf="@+id/period"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/add" />
 
